@@ -1,6 +1,12 @@
 3.3.0 (Next 3.x Release)
 ------------------------
 
+- ``/etc/supervisor/supervisord.conf`` has been added to the config file search
+  paths.  Many versions of Supervisor packaged for Debian and Ubuntu have
+  included a patch that added this path.  This difference was reported in a
+  number of tickets as a source of confusion and upgrade difficulties, so the
+  path has been added.  Patch by Kelvin Wong.
+
 - Glob patterns in the ``include`` section now support the ``host_node_name``
   expansion.  Patch by Paul Lockaby.
 
